--- a/FrontEnd/style/index.css
+++ b/FrontEnd/style/index.css
@@ -107,6 +107,7 @@ section {
 }
 body {
   line-height: 1;
+  background-color: #e5e5e5;
 }
 ol,
 ul {
@@ -173,9 +174,13 @@ nav li {
   padding: 0 10px;
   font-size: 1.2em;
 }
-
-li:hover {
+li:hover,
+a:hover {
   color: #b1663c;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
 #introduction {
   display: flex;
