--- a/FrontEnd/landpage/landpage.css
+++ b/FrontEnd/landpage/landpage.css
@@ -3,6 +3,8 @@
    License: none (public domain)
 */
 
+@import url("../modale/modale.css");
+
 html,
 body,
 div,
@@ -142,9 +144,6 @@ main {
   max-width: 1140px;
   margin: auto 245px;
 }
-/* section {
-  margin: 50px 0;
-} */
 h1 {
   display: flex;
   flex-direction: column;
@@ -263,12 +262,12 @@ a {
   text-align: center;
   margin-bottom: 2em;
 }
-.filter-item {
+.filter-button {
   display: flex;
   justify-content: center;
   margin: auto;
 }
-.filter-item button {
+.filter-button button {
   text-align: center;
   height: 32px;
   background: none;
@@ -282,11 +281,11 @@ a {
   color: #1d6154;
   padding: 0 9px 0 9px;
 }
-.filter-item button:hover {
+.filter-button button:hover {
   background: #1d6154;
   color: white;
 }
-.filter-item .btn.active {
+.filter-button .btn.active {
   background: #1d6154;
   color: white;
 }
@@ -299,10 +298,11 @@ a {
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
+
 .gallery img {
   width: 100%;
 }
-.gallery .filterButton {
+.gallery .filter-gallery {
   display: none;
 }
 .gallery .show {
