--- a/FrontEnd/login/loginpage.css
+++ b/FrontEnd/login/loginpage.css
@@ -1,21 +1,21 @@
-@import url("../style/index.css");
+@import url("../landpage/landpage.css");
 
 .active {
   font-weight: 600;
   color: #000000;
 }
 
-h1 {
+.container-login h1 {
   text-align: center;
   color: #1d6154;
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 7px;
 }
-.container-error {
+.container-login .container-error {
   text-align: center;
 }
-.error {
+.container-login .error {
   color: red;
   font-size: 20px;
 }
@@ -25,14 +25,14 @@ h1 {
   color: #3d3d3d;
 }
 
-.container-form {
+.container-login .container-form {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
 
-input[type="email"],
-input[type="password"] {
+.container-login input[type="email"],
+.container-login input[type="password"] {
   padding: 15px 0;
   font-size: 1em;
   border: 0;
@@ -40,26 +40,25 @@ input[type="password"] {
   margin-top: 7px;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-label {
+.container-login label {
   margin-top: 30px;
 }
-button[type="submit"] {
+.container-login button[type="submit"] {
   border-radius: 60px;
   background-color: #1d6154;
   color: white;
   margin: auto;
-  /* padding: 10px 39px; */
   border: 0;
   font-size: 14px;
   margin-top: 37px;
   width: 179px;
   height: 36px;
 }
-.container-psw {
+.container-login .container-psw {
   text-align: center;
   margin-top: 37px;
 }
-.container-psw a {
+.container-login .container-psw a {
   color: #3d3d3d;
   text-decoration-line: underline;
 }
