--- a/FrontEnd/landpage/landpage.css
+++ b/FrontEnd/landpage/landpage.css
@@ -238,6 +238,7 @@ a {
 #introduction figure {
   /* flex: 1; */
   max-width: 474px;
+  height: 313;
 }
 #introduction img {
   height: 355px;
@@ -301,12 +302,19 @@ a {
 
 .gallery img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .gallery .filter-gallery {
   display: none;
 }
+.filter-gallery figcaption {
+  padding-top: 7px;
+}
+
 .gallery .show {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Contact */
