--- a/FrontEnd/modale/modale.css
+++ b/FrontEnd/modale/modale.css
@@ -1,14 +1,19 @@
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .modal-container {
   display: none;
   position: fixed;
-  z-index: 1;
-  padding-top: 60px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 /* Modal Content */
@@ -19,36 +24,40 @@
   border-radius: 10px;
   margin: auto;
   width: min(70%, 630px);
+  max-height: calc(100vh - 20px);
+  overflow: auto;
 }
 
-/* The Close Button */
-.modal-container .close {
+.container-icon {
+  display: flex;
+  justify-content: flex-end;
+}
+.modal-content .close {
   color: #000000;
-  align-self: flex-end;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: bold;
+  padding-left: 36px;
   padding-right: 36px;
   padding-top: 32px;
 }
 
-.modal-container .close:hover,
-.modal-container .close:focus {
+.modal-content .close:hover,
+.modal-content .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
 }
-.modal-container .modal-content h1 {
+.modal-content h2 {
   text-align: center;
   font-weight: 400;
   font-family: "Work Sans";
   font-size: 26px;
   color: #000000;
 }
-.modal-container .gallery-modale {
+.modal-content .gallery-modale {
   border-bottom: 1px solid #b3b3b3;
-  width: 66%;
   margin: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-top: 51px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -56,43 +65,49 @@
   grid-row-gap: 10px;
   padding-bottom: 47px;
 }
-.modal-container figure {
+.modal-content figure {
   max-width: 78px;
   position: relative;
 }
-.modal-container img {
+.modal-content img {
   height: 104px;
   object-fit: cover;
+  width: 100%;
 }
-.modal-container #add-image,
-.modal-container #delete-gallery {
+
+.modal-content #delete-gallery {
   width: min(70%, 237px);
   margin: auto;
   border: 0;
   font-size: 14px;
-}
-.modal-container #add-image {
-  margin-top: 48px;
-  background: #1d6154;
-  border-radius: 60px;
-  color: #ffffff;
-  height: 36px;
-  font-weight: 700;
-}
-.modal-container #delete-gallery {
   margin-top: 23px;
   background: none;
   color: #d65353;
   font-weight: 400;
   margin-bottom: 48px;
 }
-.modal-container .edit-image {
+
+.modal-content #addImage {
+  font-family: "Syne";
+  text-align: center;
+  width: min(70%, 237px);
+  margin: 48px auto 0px auto;
+  background: #1d6154;
+  border-radius: 60px;
+  color: #ffffff;
+  height: 36px;
+  line-height: 36px;
+  font-weight: 700;
+  display: block;
+}
+
+.modal-content .edit-image {
   font-size: 12px;
   background: none;
   border: 0;
   font-family: "work sans";
 }
-.modal-container .trash-button {
+.modal-content .trash-button {
   display: inline-block;
   width: 17px;
   height: 17px;
@@ -105,8 +120,128 @@
   right: 6px;
   border-radius: 2px;
 }
-.modal-container .trash-button i {
+.modal-content .trash-button i {
   color: #ffffff;
   width: 9px;
   height: 9px;
+}
+
+/* DragModal content */
+.modal-drag {
+  display: none;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin: auto;
+  width: min(70%, 630px);
+  max-height: calc(100vh - 20px);
+  overflow: auto;
+}
+.modal-drag h2 {
+  text-align: center;
+  font-weight: 400;
+  font-family: "Work Sans";
+  font-size: 26px;
+  color: #000000;
+}
+.modal-drag .container-icon {
+  display: flex;
+  justify-content: space-between;
+}
+.modal-drag .close,
+.modal-drag .arrow-left {
+  color: #000000;
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 36px;
+  padding-right: 36px;
+  padding-top: 32px;
+  cursor: pointer;
+}
+
+.modal-drag #uploadImage {
+  width: 66%;
+  margin: auto;
+  margin-top: 51px;
+}
+.modal-drag .container-input {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 47px;
+  border-bottom: 1px solid #b3b3b3;
+}
+.modal-drag input[type="text"],
+.modal-drag select {
+  padding: 15px 0;
+  font-size: 1em;
+  border: 0;
+  background-color: #ffffff;
+  margin-top: 7px;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.modal-drag button[type="submit"] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border-radius: 60px;
+  background-color: #a7a7a7;
+  color: white;
+  border: 0;
+  font-size: 14px;
+  margin-top: 37px;
+  width: 237px;
+  line-height: 36px;
+  font-family: "Syne";
+  cursor: pointer;
+}
+.modal-drag .container-input label {
+  padding-top: 21px;
+}
+.modal-drag .image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 169px;
+  background: #e8f1f7;
+  border-radius: 3px;
+}
+.modal-drag .image-container p {
+  font-size: 14px;
+  font-family: "Work sans";
+  padding-top: 7px;
+}
+
+#addNewPicture {
+  visibility: hidden;
+}
+
+.modal-drag .add-picture {
+  width: 173px;
+  line-height: 36px;
+  border-radius: 50px;
+  background: #cbd6dc;
+  border: none;
+  cursor: pointer;
+  font-family: "Work Sans";
+  font-weight: 500;
+  font-size: 14px;
+  color: #306685;
+  text-align: center;
+}
+.modal-drag .fa-regular.fa-image {
+  padding-top: 26px;
+  color: #b9c5cc;
+  font-size: 40px;
+}
+.modal-drag #newImage {
+  height: 169px;
+  display: none;
+  width: 129px;
+  overflow: hidden;
+}
+.modal-drag #image {
+  width: 100%;
+  object-fit: cover;
 }
