--- a/FrontEnd/modale/modale.css
+++ b/FrontEnd/modale/modale.css
@@ -85,6 +85,7 @@
   color: #d65353;
   font-weight: 400;
   margin-bottom: 48px;
+  cursor: pointer;
 }
 
 .modal-content #addImage {
@@ -120,10 +121,24 @@
   right: 6px;
   border-radius: 2px;
 }
-.modal-content .trash-button i {
+.modal-content .trash-button i,
+.modal-content .arrow-multi i {
   color: #ffffff;
   width: 9px;
   height: 9px;
+}
+.modal-content .arrow-multi {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  line-height: 17px;
+  background-color: black;
+  text-align: center;
+  position: absolute;
+  cursor: pointer;
+  top: 6px;
+  right: 26px;
+  border-radius: 2px;
 }
 
 /* DragModal content */
