--- a/FrontEnd/modale/modale.css
+++ b/FrontEnd/modale/modale.css
@@ -5,15 +5,16 @@
   margin: 0;
   padding: 0;
 }
-
 .modal-container {
-  display: none;
-  position: fixed;
+  visibility: hidden;
+  position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  min-height: 100vh;
+  z-index: 1000;
+  padding-top: 800px;
+  padding-bottom: 1500px;
 }
 
 /* Modal Content */
@@ -24,10 +25,7 @@
   border-radius: 10px;
   margin: auto;
   width: min(70%, 630px);
-  max-height: calc(100vh - 20px);
-  overflow: auto;
 }
-
 .container-icon {
   display: flex;
   justify-content: flex-end;
@@ -40,7 +38,6 @@
   padding-right: 36px;
   padding-top: 32px;
 }
-
 .modal-content .close:hover,
 .modal-content .close:focus {
   color: #000;
@@ -57,7 +54,6 @@
 .modal-content .gallery-modale {
   border-bottom: 1px solid #b3b3b3;
   margin: auto;
-  /* overflow: hidden; */
   margin-top: 51px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -100,6 +96,8 @@
   line-height: 36px;
   font-weight: 700;
   display: block;
+  border: none;
+  cursor: pointer;
 }
 
 .modal-content .edit-image {
@@ -149,8 +147,6 @@
   border-radius: 10px;
   margin: auto;
   width: min(70%, 630px);
-  max-height: calc(100vh - 20px);
-  overflow: auto;
 }
 .modal-drag h2 {
   text-align: center;
@@ -173,7 +169,6 @@
   padding-top: 32px;
   cursor: pointer;
 }
-
 .modal-drag #uploadImage {
   width: 66%;
   margin: auto;
@@ -194,7 +189,6 @@
   margin-top: 7px;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-
 .modal-drag button[type="submit"] {
   display: flex;
   justify-content: center;
@@ -210,6 +204,7 @@
   line-height: 36px;
   font-family: "Syne";
   cursor: pointer;
+  margin-bottom: 55px;
 }
 .modal-drag .container-input label {
   padding-top: 21px;
@@ -227,11 +222,9 @@
   font-family: "Work sans";
   padding-top: 7px;
 }
-
 #addNewPicture {
   visibility: hidden;
 }
-
 .modal-drag .add-picture {
   width: 173px;
   line-height: 36px;
