--- a/FrontEnd/landpage/landpage.css
+++ b/FrontEnd/landpage/landpage.css
@@ -280,7 +280,7 @@ a {
   text-align: center;
   height: 32px;
   background: none;
-  border: 1px solid #1d6154;
+  border: 2px solid #1d6154;
   border-radius: 60px;
   margin-right: 10px;
   text-transform: capitalize;
@@ -290,6 +290,7 @@ a {
   color: #1d6154;
   padding: 0 9px 0 9px;
 }
+
 .filter-button button:hover {
   background: #1d6154;
   color: white;
@@ -297,8 +298,9 @@ a {
 .filter-button .btn.active {
   background: #1d6154;
   color: white;
+  border: none;
 }
-.gallery {
+/* .gallery {
   overflow: hidden;
   margin-top: 51px;
   width: 100%;
@@ -311,6 +313,20 @@ a {
 .gallery img {
   width: 100%;
   height: 404px;
+  object-fit: cover;
+} */
+.gallery {
+  margin-top: 51px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.gallery img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 .gallery .filter-gallery {
